# ad_review_dashboard

./: .gitignore  .mcp.json.example  CLAUDE.md  CLAUDE.md.orig  README.md  docker-compose.dev.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: CLAUDE.md  CLAUDE.md.orig  settings.json
.claude/guides/: ACCESSIBILITY_GUIDELINES.md  AESTHETIC_DIRECTIONS.md  AGENT_CHAIN_RULES.md  AGENT_CLI_FLAG_GUIDE.md  AGENT_HOOK_SYSTEM_ANALYSIS.md  AGENT_OPTIMIZATION_GUIDE.md  AGENT_OUTPUT_FORMAT.md  AGENT_SYSTEM_COMPARISON.md  AGENT_SYSTEM_PORTABILITY_GUIDE.md  ANTHROPIC_CONTEXT_ENGINEERING.md  ASCII_ART_GUIDE.md  AURORA_READER_WRITER_PATTERN.md  AUTO_EXECUTION_GUIDE.md  AUTO_WORKFLOW_GUIDE.md  CLAUDE_CODE_2.0.42-43_INTEGRATION.md  CODE_PATTERNS.md  (+40 more)
apps/s3gate/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/s3gate/backend/migrations/: env.py
apps/s3gate/backend/scripts/: export-openapi.py  init-db.sql
apps/s3gate/backend/src/s3gate/: config.py  database.py  main.py
apps/s3gate/backend/src/s3gate/api/: example_router.py
apps/s3gate/backend/src/s3gate/models/: __init__.py  audit_log.py  example.py  menu.py  role.py  user.py  user_role.py
apps/s3gate/backend/src/s3gate/security/: auth.py
apps/s3gate/backend/src/s3gate/services/: example_service.py
argocd/: README.md  advertisement-dev.yaml  advertisement-prd.yaml  s3gate-dev.yaml  s3gate-prd.yaml  {app_name}-dev.yaml  {app_name}-prd.yaml
docs/: API-USAGE.template.md  DBUSER-POLICY.md  OPS.template.md  STANDARD-DOCS.md
scripts/: create-app.sh  init-project.sh
templates/: DESIGN.md
(+538 files in other folders)
